...
                        style="@style/Widget.FlyNes.Nearby.Action"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/nearby_tab_devices"
                        android:layout_weight="1" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/nearby_tab_friends"
                        style="@style/Widget.FlyNes.Nearby.Action"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/nearby_tab_friends"
                        android:layout_weight="1" />
                </com.google.android.material.button.MaterialButtonToggleGroup>
...
